<resources>
    <string name="app_name">KrumbsReacho</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_news_feed">NewsFeedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_post_form_item">PostFormItemActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cancel_button_text">closes the form</string>
    <string name="post_form_ok_check">{fa-check}</string>
    <string name="post_form_cancel_close">{fa-close}</string>
    <string name="form_post_upload_message">upload an image which you want to spread</string>
    <string name="form_title_hint">Write a title</string>
    <string name="form_description_hint">Provide a description</string>
    <string name="form_titlebar_additional_text"> - Spread it!</string>
    <string name="action_menu_humans">Humans</string>
    <string name="action_menu_news">News</string>
    <string name="action_menu_causes">Causes</string>
    <string name="action_menu_jobs">Jobs</string>
    <string name="action_menu_bites">Bites</string>
    <string name="krumbssdk_app_id">YOUR_APPLICATION_ID</string>
    <string name="krumbssdk_client_key">YOUR_CLIENT_KEY</string>
</resources>
